--- a/Activity1/todo.css
+++ b/Activity1/todo.css
@@ -20,3 +20,48 @@ body {
     justify-content: center;
     height: 10vh;
    }
+
+   ul li{
+    font-size: 17px;
+    
+    margin-top: 5px;
+    user-select: none;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+
+    ul .checked{
+        color: #555;
+        text-decoration: line-through;
+    }
+    ul .checked::before{
+        background-color: #ff5945;
+        padding-right: 10px;
+    }
+    ul li::before{
+        position: absolute;
+        content: '';
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        right: 80px;
+        border: 2px solid #ff5945;
+    }
+span {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #555;
+    font-size: 18px;
+    transition: all .2s ease;
+}
